--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -14,9 +14,10 @@
 <body>
     
     <div id="main-container">
-        <div id="tictactoe">
-
-        </div>
+        <div id="player"></div> 
+        <!-- one is for the winner -->
+        <div id="tictactoe"></div> 
+        <!-- one is for the grid -->
     </div>
 
     <script src="tictactoe.js">
