--- a/formsProject/index.html
+++ b/formsProject/index.html
@@ -10,40 +10,42 @@
 
 </head>
 <body>
-    <form action="">
+    <!-- use breaks to seperate </br> --> 
+    <!-- use spans -->
+    <form action="post">
         <div id="formInfo">
             <div class="inputs">
-                <label for="">Gender: </label>
+                <label for="gender">Gender: </label>
 
-                <input type="radio" name="age" value="less15" id="less15">
-                <label for="less15">Male</label>
+                <input type="radio" name="male" id="" autofocus>
+                <label for="male">Male</label>
 
-                <input type="radio" name="age" value="between15-25" id="between15-25">
-                <label for="between15-25">Female</label>
+                <input type="radio" name="female" id="">
+                <label for="female">Female</label>
             </div>
             <div class="inputs">
-                <label for="">LastName: </label>
-                <input type="text" name="" id="">
+                <label for="lastName">LastName: </label>
+                <input type="text" name="lastName" id="lastName">
             </div>
             <div class="inputs">
-                <label for="">FirstName: </label>
-                <input type="text" name="" id="">
+                <label for="firstName">FirstName: </label>
+                <input type="text" name="firstName" id="firstName">
             </div>
             <div class="inputs">
-                <label for="">Age: </label>
-                <input type="text" name="" id="">
+                <label for="age">Age: </label>
+                <input type="number" name="age" id="age">
             </div>
             <div class="inputs">
-                <label for="">Login: </label>
-                <input type="text" name="" id="">
+                <label for="login">Login: </label>
+                <input type="text" name="login" id="login">
             </div>
             <div class="inputs">
-                <label for="">Password: </label>
-                <input type="text" name="" id="">
+                <label for="password">Password: </label>
+                <input type="password" name="password" id="password">
             </div>
             <div class="inputs">
-                <label for="">Password: (confirmation): </label>
-                <input type="text" name="" id="">
+                <label for="passwordConfirm">Password: (confirmation): </label>
+                <input type="password" name="passwordConfirm" id="passwordConfirm">
             </div>
             <div class="inputs">
                 <label for="country">Country: </label>
@@ -54,13 +56,13 @@
                 </select>
             </div>
             <div class="inputs">
-                <input type="checkbox" name="kimbap">
-                <label for="kimbap">I want to receive the newsletter every month</label>
+                <input type="checkbox" name="newsletter" id="newsletter">
+                <label for="newsletter">I want to receive the newsletter every month</label>
             </div>
         </div>
         <div id="buttons-section">
-            <button>Suscribe</button>
-            <button>Reset the form</button>
+            <button type="submit">Suscribe</button>
+            <button type="reset">Reset the form</button>
         </div>
     </form>
 
